# binarySimilarityComparison

./: .gitignore  CMakeLists.txt  JavaClassToToken.cpp  JavaClassToToken.h  README.md  RabinKarpAlgorithm.cpp  RabinKarpAlgorithm.h  a.out  findwhatused.cpp  levenshtein.cpp  levenshtein.h  levenshteinRecursive.cpp  levenshteinRecursive.h  main.cpp  mainTest.cpp  mapOfMIPSInstructionSet.cpp  mapOfMIPSInstructionSet.h  merge3linesText.cpp  sortInstruction.cpp  sortInstruction.h
代码克隆检测项目1.7/: AnalyzeBetweenJavaFiles.cpp  AnalyzeBetweenJavaFiles.h  AnalyzeBetweenMIPSFiles.cpp  AnalyzeBetweenMIPSFiles.h  AnalyzeBetweenX86Files.cpp  AnalyzeBetweenX86Files.h  AnalyzeWholeJavaDir.cpp  AnalyzeWholeJavaDir.h  AnalyzeWholeMIPSDir.cpp  AnalyzeWholeMIPSDir.h  AnalyzeWholeX86Dir.cpp  AnalyzeWholeX86Dir.h  CMakeLists.txt  CommandFinder.cpp  CommandFinder.h  DirParser.cpp  DirParser.h  FileNameGenerator.cpp  FileNameGenerator.h  IceShaver  IceShaver.cbp  Levenshtein.cpp  Levenshtein.h  Makefile  MatchSaver.cpp  MatchSaver.h  MatrixSaver.cpp  MatrixSaver.h  Pretreatment.cpp  Pretreatment.h  SimilarPortion.cpp  SimilarPortion.h  TextPartParser.cpp  TextPartParser.h  ToNGramToken.cpp  ToNGramToken.h  TokenAnalyzer.cpp  TokenAnalyzer.h  TokenGenerater.cpp  TokenGenerater.h  (+4 more)
代码克隆检测项目1.7/JAVAResolver/: CMakeLists.txt  JavaClassToToken.cpp  JavaClassToToken.h  JavaPertreatment.cpp  JavaPertreatment.h  JavaResolver.cpp  JavaResolver.h  Makefile  cmake_install.cmake
代码克隆检测项目1.7/MIPSResolver/: CMakeLists.txt  FunctionAnalyzer.cpp  FunctionAnalyzer.h  FunctionCutter.cpp  FunctionCutter.h  (+21 more)
(+12 files in other folders)
